--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,41 +1,21 @@
-###### KEY BINDINGS ######
+new-session -s Roberto -n "front" -c ~/Dev/frontend/cv-administration-web -d
+split-window -v -t Roberto:0 -c ~/Dev/frontend/cv-administration-web
+send-keys -t Roberto:0.0 "yarn dev" C-m
+send-keys -t Roberto:0.1 "code ." C-m
+send-keys -t Roberto:0.1 "git status" C-m
 
-# Change bind prefix
-unbind C-b
-set -g prefix C-space
+new-window -n "back" -t Roberto:1 -c ~/Dev/backend/cv-administration-api
+split-window -v -t Roberto:1 -c ~/Dev/backend/cv-administration-api
+send-keys -t Roberto:1.0 "code ." C-m
+send-keys -t Roberto:1.1 "git status" C-m
 
-# Change navigation through panes to a vim-line mode
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+new-window -n "cv-react-component" -t Roberto:2 -c ~/Dev/frontend/cv-react-components
+split-window -v -t Roberto:2 -c ~/Dev/frontend/cv-react-components
+send-keys -t Roberto:2.0 "code ." C-m
+send-keys -t Roberto:2.1 "git status" C-m
 
-###### COLORS ######
+select-window -t Roberto:0
 
-# Use 256 colors
-set -g default-terminal "screen-256color"
-#set -g default-terminal "xterm"
-
-# Color for status bar
-set -g status-bg colour8
-set -g status-fg colour1
-
-# Color for command line
-set -g message-fg black
-set -g message-bg colour203
-set -g message-attr bright
-
-# Color pane dividers
-set -g pane-border-fg white
-set -g pane-border-bg default
-set -g pane-active-border-fg colour161
-set -g pane-active-border-bg default
-
-# Switch current pane background color to light
-bind v select-pane -P 'bg=colour229'
-bind b select-pane -P 'bg=colour232'
-bind g select-pane -P 'bg=colour176'
-
-set-option -g default-command bash
-
-set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
+bind-key W send-keys ":wa" C-m
+bind-key X send-keys "pkill -f Code"
+set -g command-alias[100] exito='kill-server'
